--- a/index.html
+++ b/index.html
@@ -1,40 +1,116 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | expenses</title>
-  </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=900 height=1600 tabindex="-1" style="width: 900px; height: 1600px; background: #231F20"></canvas>
+    <title>Unity WebGL Player | Expenses</title>
+</head>
+<body style="text-align: center; padding: 0; border: 0; margin: 0;">
+    <canvas id="unity-canvas" width="900" height="1600" tabindex="-1" style="width: 900px; height: 1600px; background: #231F20"></canvas>
     <script src="Build/GitGameTest.loader.js"></script>
     <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
+        // Detect mobile devices and apply appropriate styles
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+            const meta = document.createElement('meta');
+            meta.name = 'viewport';
+            meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+            document.head.appendChild(meta);
 
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
+            const canvas = document.querySelector("#unity-canvas");
+            canvas.style.width = "100%";
+            canvas.style.height = "100%";
+            canvas.style.position = "fixed";
 
-        document.body.style.textAlign = "left";
-      }
+            document.body.style.textAlign = "left";
+        }
 
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/GitGameTest.data",
-        frameworkUrl: "Build/GitGameTest.framework.js",
-        codeUrl: "Build/GitGameTest.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "expenses",
-        productVersion: "1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
+        // Initialize Unity WebGL instance
+        let gameInstance = null;
+        createUnityInstance(document.querySelector("#unity-canvas"), {
+            dataUrl: "Build/GitGameTest.data",
+            frameworkUrl: "Build/GitGameTest.framework.js",
+            codeUrl: "Build/GitGameTest.wasm",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "DefaultCompany",
+            productName: "expenses",
+            productVersion: "1.0",
+        }).then(instance => {
+            gameInstance = instance;
+            console.log("Unity instance created.");
+        }).catch(err => {
+            console.error("Failed to create Unity instance:", err);
+        });
+
+        // Clipboard function
+        function CopyToClipboard(text) {
+            navigator.clipboard.writeText(text).then(() => {
+                console.log('Text copied to clipboard:', text);
+            }).catch(err => {
+                console.error('Failed to copy text to clipboard:', err);
+            });
+        }
+
+        // Function to show the HTML input field
+        function ShowHtmlInput(fieldName) {
+            let inputField = document.getElementById('unityHtmlInput');
+
+            if (!inputField) {
+                // Create the input field if it doesn't exist
+                inputField = document.createElement('input');
+                inputField.id = 'unityHtmlInput';
+                inputField.style.position = 'absolute';
+                inputField.style.zIndex = '1000';
+                inputField.style.fontSize = '16px';
+                inputField.style.border = '1px solid #ccc';
+                inputField.style.padding = '5px';
+                inputField.style.background = '#fff';
+                document.body.appendChild(inputField);
+            }
+
+            // Display and focus the input field
+            inputField.style.display = 'block';
+            inputField.focus();
+
+            // Remove any previous event listeners
+            inputField.onkeydown = null;
+
+            // Add an event listener for the "Enter" key
+            inputField.onkeydown = (event) => {
+                if (event.key === 'Enter') {
+                    const value = inputField.value;
+                    console.log(`Entered value: ${value}`); // Debugging
+                    inputField.style.display = 'none';
+                    inputField.value = '';
+                    gameInstance.SendMessage('GameManager', 'TestMethod', 'Hello');
+
+
+                    // Send the value to Unity
+                    if (gameInstance) {
+                        console.log(`Sending message to Unity: ${fieldName}:${value}`);
+                        gameInstance.SendMessage('GameManager', 'SetFieldValue', `${fieldName}:${value}`);
+                    } else {
+                        console.error('Game instance is not initialized.');
+                    }
+
+                    // Remove the event listener to prevent duplicate events
+                    inputField.onkeydown = null;
+                }
+            };
+
+            // Hide the input field when it loses focus
+            inputField.onblur = () => {
+                inputField.style.display = 'none';
+                inputField.value = '';
+            };
+        }
+
+        // Bind functions for Unity
+        function bindUnityInput() {
+            window.CopyToClipboard = CopyToClipboard;
+            window.ShowHtmlInput = ShowHtmlInput;
+        }
+
+        bindUnityInput();
     </script>
-  </body>
+</body>
 </html>
